--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  background-color: rgb(214, 253, 245);
 }
 
 .container {
@@ -18,6 +19,7 @@ body {
   border: 1px solid steelblue;
   padding: 30px;
   border-radius: 5px;
+   background-color: rgb(242, 251, 251);
 }
 
 .header {
